force-app/main/default/objects/Batch_Recovery_info__mdt/Batch_Recovery_info__mdt.object-meta.xml
<CustomObject>
    <label>Batch Recovery info</label>
    <pluralLabel>Batch Recovery info</pluralLabel>
</CustomObject>