force-app/main/default/objects/Batch_Recovery_info__mdt/fields/Datetime_Format__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Format__c</fullName>
    <label>Datetime Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>