force-app/main/default/objects/Batch_Recovery_info__mdt/fields/Replace_Value_Field__c.field-meta.xml
<CustomField>
    <fullName>Replace_Value_Field__c</fullName>
    <label>Replace Value Field</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>